--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 
+target/
+
 # Created by https://www.gitignore.io/api/go,vim,visualstudiocode
 # Edit at https://www.gitignore.io/?templates=go,vim,visualstudiocode
 
